# orchestrator

./: .gitignore  CONTRIBUTING.md  DOCKER_README.md  Dockerfile  QUICKSTART.md  README.md  VENV_README.md  docker-compose.yml  env.example  nginx.conf  pyproject.toml  requirements.txt  setup.bat  setup_environments.bat  start_services.bat
Backend/: .env  .env.example  README.md  requirements.txt
Backend/app/: __init__.py  main.py
Backend/app/api/: __init__.py  auth.py  chat.py  raptor.py  sessions.py  simple.py
Backend/app/core/: __init__.py  auth.py  config.py
Backend/app/evaluation/: eval_datasets.py  eval_runner.py  metrics.py  quality_test.py
Backend/app/schemas/: __init__.py  chat.py
Backend/app/services/: __init__.py  embedding_client.py  enhanced_rag.py  ollama_client.py  processor.py  rag_adapter.py  rag_pipeline.py  raptor_client.py  short_term_memory.py  utils.py  vector_client.py
VECTOR_STORAGE_SERVICE/: .env.example  Dockerfile  README.md  requirements.txt  run.py
VECTOR_STORAGE_SERVICE/app/: __init__.py  config.py  config_manager.py  main.py  models.py
VECTOR_STORAGE_SERVICE/app/routes/: __init__.py  raptor.py  vectors.py
VECTOR_STORAGE_SERVICE/app/services/: __init__.py  cache_manager.py  chunker.py  embedder.py  error_handler.py  maintenance.py  metadata.py  pipeline.py  raptor_builder.py  raptor_retriever.py  reranker.py  utils.py  vector_store.py
VECTOR_STORAGE_SERVICE/chroma_store/: chroma.sqlite3
personal_LLM_embedder/: .env.example  Dockerfile  README.md  embedder_api.py  requirements.txt
(+7 files in other folders)
